LUCENE-9727: add build-side support for running Hunspell validation checks.